fix widht on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 
-        font-family: "Press Start 2P", system-ui;
-        font-weight: 400;
-        font-style: normal;
-      
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+
 }
 
-main{
+main {
     background-color: rgb(0, 0, 71);
     min-height: 100vh;
 }
@@ -18,40 +18,43 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 499px;
     margin: auto;
+
+    @media (min-width: 500px){
+        width: 499px;
+    }
 }
 
 
 
-    
-    .card-container{
-        width: 100px;
-        height: 100px;
-        margin-bottom: 33px;
-        position: relative;
 
-    }
-    .on-card {
-        width: 100%;
-        height: 100%;
-        font-size: 50px;
-        text-align: center;
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.329);
+.card-container {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 33px;
+    position: relative;
 
-    }
-    .off-card{
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background-color: rgb(100, 0, 0);
-        background-image: url('/assets/img/space-invaders-pixel-retro-arcade-svgrepo-com.png');
-        background-position: center;
-        background-size: cover;
+}
 
-    }
+.on-card {
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
+    text-align: center;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.329);
 
+}
 
-      
+.off-card {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgb(100, 0, 0);
+    background-image: url('/assets/img/space-invaders-pixel-retro-arcade-svgrepo-com.png');
+    background-position: center;
+    background-size: cover;
+
+}
+
